Fix side by side overflow

--- a/components/blog/sidebyside.module.scss
+++ b/components/blog/sidebyside.module.scss
@@ -32,6 +32,12 @@
   }
 }
 
+.side {
+  @include breakpoint(md) {
+    overflow: auto;
+  }
+}
+
 .side,
 .side > div {
   flex: 1;
